--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
-  "twrp_url": "https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni",
-  "twrp_branch": "twrp-9.0",
+  "twrp_url": "https://github.com/minimal-manifest-twrp/platform_manifest_twrp_aosp.git",
+  "twrp_branch": "twrp-11",
   "git_username": "Pinkdoge",
   "git_email": "42758990+Pinkdoge@users.noreply.github.com",
   "use_own_dt": true,
-  "dt_url": "TeamWin/android_device_oneplus_cheeseburger_dumpling",
-  "dt_branch": "android-9.0",
+  "dt_url": "HK4567/android_device_lenovo_j706f",
+  "dt_branch": "android-11.0",
   "dt_remote": "github",
-  "dt_path": "device/oneplus/cheeseburger_dumpling",
-  "device_code": "cheeseburger_dumpling",
+  "dt_path": "device/lenovo/J706F",
+  "device_code": "J706F",
   "fix_product": true,
   "fix_misscom": true,
   "fix_busybox": false,
